new file:   images/grey-yellow-md.jpg 	modified:   index.html 	modified:   styles/index.css

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
                     <div class="header-actions">
                         <a href="#introduction">
-                            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                            <button class="mdl-button mdl-button--accent mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
                                 Take a look
                                 <i class="material-icons">&#xE5C5;</i>
                             </button>
@@ -95,7 +95,7 @@
 
                     <div class="three-cards horizontal">
 
-                        <div class="mdl-card mdl-cell mdl-cell--3-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone">
+                        <div class="mdl-card mdl-cell mdl-cell--3-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone mdl-shadow--2dp">
                             <h5>
                                 <i class="material-icons">&#xE87C;</i> Social network
                             </h5>
@@ -104,7 +104,7 @@
                             </div>
                         </div>
 
-                        <div class="mdl-card mdl-cell mdl-cell--3-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone">
+                        <div class="mdl-card mdl-cell mdl-cell--3-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone mdl-shadow--2dp">
                             <h5>
                                 <i class="material-icons">&#xE2BD;</i> Cloud storage
                             </h5>
@@ -113,7 +113,7 @@
                             </div>
                         </div>
 
-                        <div class="mdl-card mdl-cell mdl-cell--3-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone">
+                        <div class="mdl-card mdl-cell mdl-cell--3-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone mdl-shadow--2dp">
                             <h5>
                                 <i class="material-icons">&#xE61D;</i> Communication
                             </h5>
@@ -164,16 +164,16 @@
 
                         <p>Providing highly-efficient low-cost hardware designed for a P2P Internet infrastructure.</p>
 
-                        <div id="hardware-cards">
+                        <div class="hardware-cards">
 
                             <div class="mdl-cell mdl-cell--5-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone">
 
-                                <div class="mdl-card">
+                                <div class="mdl-card mdl-shadow--2dp">
 
                                     <h5>Dawn R1</h5>
 
                                     <div class="mdl-card__supporting-text">
-                                        <p>High cost–performance ratio router designed for a master node and multi-purpose usage around 350$.</p>
+                                        <p>High cost–performance ratio router designed for a master node and multi-purpose usage.</p>
                                         <ul>
                                             <li>4 Cores 2.4GHz+</li>
                                             <li>4GB RAM (Up to 8GB)</li>
@@ -181,10 +181,11 @@
                                             <li>802.11ac x2 MIMO</li>
                                             <li>Dawn OS</li>
                                         </ul>
+                                        <p>~ 350$.</p>
                                     </div>
 
                                     <div class="mdl-card__actions mdl-card--border">
-                                        <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                                        <button class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect">
                                             Take a look
                                         </button>
                                     </div>
@@ -195,12 +196,12 @@
 
                             <div class="mdl-cell mdl-cell--5-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone">
 
-                                <div class="mdl-card">
+                                <div class="mdl-card mdl-shadow--2dp">
 
                                     <h5>Dawn OP1</h5>
 
                                     <div class="mdl-card__supporting-text">
-                                        <p>High cost–performance ratio mini-PC designed for a client and multi-purpose usage around 35$.</p>
+                                        <p>High cost–performance ratio mini-PC designed for a client and multi-purpose usage.</p>
                                         <ul>
                                             <li>4 Cores 1GHz+</li>
                                             <li>1GB DDR3</li>
@@ -208,10 +209,11 @@
                                             <li>10/100M Ethernet RJ45</li>
                                             <li>Dawn OS</li>
                                         </ul>
+                                        <p>~ 35$.</p>
                                     </div>
 
                                     <div class="mdl-card__actions mdl-card--border">
-                                        <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                                        <button class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect">
                                             Take a look
                                         </button>
                                     </div>
@@ -223,23 +225,23 @@
 
                 </div>
 
-                <!-- OS -->
+                <!-- OPERATING SYSTEM -->
                 <div id="os">
 
                     <div class="os-content">
 
                         <h3>OPERATING SYSTEM</h3>
 
-                        <p>Providing highly-efficient simple and minimalist OS more secure than 95% of OS.</p>
+                        <blockquote>Efficient, secure OS.</blockquote>
 
-                        <div id="os-card">
+                        <div class="os-card">
 
-                            <div class="mdl-card">
+                            <div class="mdl-card mdl-shadow--2dp">
 
                                 <h5>Dawn OS</h5>
 
                                 <div class="mdl-card__supporting-text">
-                                    <p>Design for security and smooth running.</p>
+                                    <p>Highly-efficient minimalist OS more secure than 95% of OS. Designed for security and smooth running.</p>
 
                                     <ul>
                                         <li>Packer</li>
@@ -257,7 +259,7 @@
                                 </div>
 
                                 <div class="mdl-card__actions mdl-card--border">
-                                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                                    <button class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect">
                                         Take a look
                                     </button>
                                 </div>
@@ -271,16 +273,15 @@
                 </div>
 
                 <!-- BLOCKCHAINS -->
-
                 <div id="blockchains">
 
                     <div class="blockchains-content">
 
                         <h3>BLOCKCHAINS</h3>
 
-                        <p>Providing highly-efficient simple and minimalist OS more secure than 95% of OS.</p>
+                        <p>Highly secure, shared and replicated ledger. Solving complex problems now and in the near future.</p>
 
-                        <div id="blockchains-card">
+                        <div class="blockchains-cards">
 
 
 
@@ -291,6 +292,134 @@
                 </div>
 
 
+                <!-- APPLICATIONS -->
+                <div id="applications">
+
+                    <div class="applications-content">
+
+                        <h3>APPLICATIONS</h3>
+
+                        <blockquote>Free, secure, private applications.</blockquote>
+
+                        <p>Browse a world-wide network built on blockchains technologies and P2P communications.</p>
+
+                        <div class="applications-cards">
+
+                            <div class="mdl-cell mdl-cell--6-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone">
+
+                                <div class="mdl-card mdl-shadow--2dp">
+
+                                    <h5>Dawn light client</h5>
+
+                                    <div class="mdl-card__supporting-text">
+                                        <ul>
+                                            <li>Incentivized blockchain-based social network</li>
+                                            <li>Decentralized blockchain-based file storage</li>
+                                            <li>Cryptocurrency wallet</li>
+                                            <li>P2P communications</li>
+                                        </ul>
+                                    </div>
+
+                                    <div class="mdl-card__actions mdl-card--border">
+                                        <button class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect">
+                                            Take a look
+                                        </button>
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            <div class="mdl-cell mdl-cell--6-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone">
+
+                                <div class="mdl-card mdl-shadow--2dp">
+
+                                    <h5>Dawn client</h5>
+
+                                    <div class="mdl-card__supporting-text">
+                                        <ul>
+                                            <li>Incentivized blockchain-based social network</li>
+                                            <li>Decentralized blockchain-based file storage</li>
+                                            <li>Cryptocurrency wallet</li>
+                                            <li>P2P communications</li>
+                                        </ul>
+                                    </div>
+
+                                    <div class="mdl-card__actions mdl-card--border">
+                                        <button class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect">
+                                            Take a look
+                                        </button>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <!-- FOOTER -->
+                <footer class="mdl-mega-footer footer">
+                    <div class="mdl-mega-footer__middle-section">
+
+                        <div class="mdl-mega-footer__drop-down-section">
+                            <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
+                            <h1 class="mdl-mega-footer__heading">Features</h1>
+                            <ul class="mdl-mega-footer__link-list">
+                                <li><a href="#">About us</a></li>
+                                <li><a href="#">Terms</a></li>
+                                <li><a href="#">Partners</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="mdl-mega-footer__drop-down-section">
+                            <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
+                            <h1 class="mdl-mega-footer__heading">Details</h1>
+                            <ul class="mdl-mega-footer__link-list">
+                                <li><a href="#">Specs</a></li>
+                                <li><a href="#">Tools</a></li>
+                                <li><a href="#">Resources</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="mdl-mega-footer__drop-down-section">
+                            <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
+                            <h1 class="mdl-mega-footer__heading">Technology</h1>
+                            <ul class="mdl-mega-footer__link-list">
+                                <li><a href="#">How it works</a></li>
+                                <li><a href="#">Patterns</a></li>
+                                <li><a href="#">Usage</a></li>
+                                <li><a href="#">Products</a></li>
+                                <li><a href="#">Contracts</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="mdl-mega-footer__drop-down-section">
+                            <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
+                            <h1 class="mdl-mega-footer__heading">FAQ</h1>
+                            <ul class="mdl-mega-footer__link-list">
+                                <li><a href="#">Questions</a></li>
+                                <li><a href="#">Answers</a></li>
+                                <li><a href="#">Contact us</a></li>
+                            </ul>
+                        </div>
+
+                    </div>
+
+                    <div class="mdl-mega-footer__bottom-section">
+                        <div class="mdl-logo">© 2017 DAWN NETWORK.</div>
+                        <ul class="mdl-mega-footer__link-list">
+                            <li><a href="#">Help</a></li>
+                            <li><a href="#">Privacy & Terms</a></li>
+                        </ul>
+                    </div>
+
+                </footer>
+
+
+
             </div>
         </main>
     </div>
@@ -299,8 +428,8 @@
 
     <!-- NODES EFFECT -->
     <link rel="stylesheet" href="styles/nodes.css"/>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/easing/EasePack.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenLite.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/easing/EasePack.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenLite.min.js"></script>
     <script src="scripts/nodes.js"></script>
 
 </html>
