--- a/index.html
+++ b/index.html
@@ -93,33 +93,37 @@
                 <!-- INTRODUCTION -->
                 <div id="introduction">
 
-                    <div class="three-cards horizontal">
+                    <div class="introduction-content">
 
-                        <div class="mdl-card mdl-cell mdl-cell--3-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone mdl-shadow--2dp">
-                            <h5>
-                                <i class="material-icons">&#xE87C;</i> Social network
-                            </h5>
-                            <div class="mdl-card__supporting-text">
-                                Tendermint blockchain-based social media platform with off-chain storage, where users get rewarded to create and curate content.
-                            </div>
-                        </div>
+                        <div class="three-cards horizontal">
 
-                        <div class="mdl-card mdl-cell mdl-cell--3-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone mdl-shadow--2dp">
-                            <h5>
-                                <i class="material-icons">&#xE2BD;</i> Cloud storage
-                            </h5>
-                            <div class="mdl-card__supporting-text">
-                                Blockchain-based, end-to-end encrypted, distributed object storage.
+                            <div class="mdl-card mdl-cell mdl-cell--3-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone mdl-shadow--2dp">
+                                <h5>
+                                    <i class="material-icons">&#xE87C;</i> Social network
+                                </h5>
+                                <div class="mdl-card__supporting-text">
+                                    Tendermint blockchain-based social media platform with off-chain storage, where users get rewarded to create and curate content.
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="mdl-card mdl-cell mdl-cell--3-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone mdl-shadow--2dp">
-                            <h5>
-                                <i class="material-icons">&#xE61D;</i> Communication
-                            </h5>
-                            <div class="mdl-card__supporting-text">
-                                Peer-to-peer, highly encrypted chat and vocal communication technologies.
+                            <div class="mdl-card mdl-cell mdl-cell--3-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone mdl-shadow--2dp">
+                                <h5>
+                                    <i class="material-icons">&#xE2BD;</i> Cloud storage
+                                </h5>
+                                <div class="mdl-card__supporting-text">
+                                    Blockchain-based, end-to-end encrypted, distributed object storage.
+                                </div>
                             </div>
+
+                            <div class="mdl-card mdl-cell mdl-cell--3-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone mdl-shadow--2dp">
+                                <h5>
+                                    <i class="material-icons">&#xE61D;</i> Communication
+                                </h5>
+                                <div class="mdl-card__supporting-text">
+                                    Peer-to-peer, highly encrypted chat and vocal communication technologies.
+                                </div>
+                            </div>
+
                         </div>
 
                     </div>
@@ -164,59 +168,53 @@
 
                         <p>Providing highly-efficient low-cost hardware designed for a P2P Internet infrastructure.</p>
 
-                        <div class="hardware-cards">
+                        <div class="two-cards">
 
-                            <div class="mdl-cell mdl-cell--5-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone">
+                            <div class="mdl-card mdl-shadow--2dp">
 
-                                <div class="mdl-card mdl-shadow--2dp">
+                                <h5>Dawn R1</h5>
 
-                                    <h5>Dawn R1</h5>
+                                <div class="mdl-card__supporting-text">
+                                    <p>High cost–performance ratio router designed for a master node and multi-purpose usage.</p>
+                                    <ul>
+                                        <li>4 Cores 2.4GHz+</li>
+                                        <li>4GB RAM (Up to 8GB)</li>
+                                        <li>64GB SSD (Optionally with a 4To HDD)</li>
+                                        <li>802.11ac x2 MIMO</li>
+                                        <li>Dawn OS</li>
+                                    </ul>
+                                    <p>~ 350$.</p>
+                                </div>
 
-                                    <div class="mdl-card__supporting-text">
-                                        <p>High cost–performance ratio router designed for a master node and multi-purpose usage.</p>
-                                        <ul>
-                                            <li>4 Cores 2.4GHz+</li>
-                                            <li>4GB RAM (Up to 8GB)</li>
-                                            <li>64GB SSD (Optionally with a 4To HDD)</li>
-                                            <li>802.11ac x2 MIMO</li>
-                                            <li>Dawn OS</li>
-                                        </ul>
-                                        <p>~ 350$.</p>
-                                    </div>
-
-                                    <div class="mdl-card__actions mdl-card--border">
-                                        <button class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect">
-                                            Take a look
-                                        </button>
-                                    </div>
-
+                                <div class="mdl-card__actions mdl-card--border">
+                                    <button class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect">
+                                        Take a look
+                                    </button>
                                 </div>
 
                             </div>
 
-                            <div class="mdl-cell mdl-cell--5-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone">
 
-                                <div class="mdl-card mdl-shadow--2dp">
+                            <div class="mdl-card mdl-shadow--2dp">
 
-                                    <h5>Dawn OP1</h5>
+                                <h5>Dawn OP1</h5>
 
-                                    <div class="mdl-card__supporting-text">
-                                        <p>High cost–performance ratio mini-PC designed for a client and multi-purpose usage.</p>
-                                        <ul>
-                                            <li>4 Cores 1GHz+</li>
-                                            <li>1GB DDR3</li>
-                                            <li>8GB to 64GB</li>
-                                            <li>10/100M Ethernet RJ45</li>
-                                            <li>Dawn OS</li>
-                                        </ul>
-                                        <p>~ 35$.</p>
-                                    </div>
+                                <div class="mdl-card__supporting-text">
+                                    <p>High cost–performance ratio mini-PC designed for a client and multi-purpose usage.</p>
+                                    <ul>
+                                        <li>4 Cores 1GHz+</li>
+                                        <li>1GB DDR3</li>
+                                        <li>8GB to 64GB</li>
+                                        <li>10/100M Ethernet RJ45</li>
+                                        <li>Dawn OS</li>
+                                    </ul>
+                                    <p>~ 35$.</p>
+                                </div>
 
-                                    <div class="mdl-card__actions mdl-card--border">
-                                        <button class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect">
-                                            Take a look
-                                        </button>
-                                    </div>
+                                <div class="mdl-card__actions mdl-card--border">
+                                    <button class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect">
+                                        Take a look
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -254,7 +252,7 @@
                                         <li>Dawn client *</li>
                                     </ul>
 
-                                    <img src="images/archlinux-logo-black-90dpi.svg.png">
+                                    <img src="images/archlinux-logo-white-90dpi.svg.png">
 
                                 </div>
 
@@ -303,55 +301,49 @@
 
                         <p>Browse a world-wide network built on blockchains technologies and P2P communications.</p>
 
-                        <div class="applications-cards">
+                        <div class="two-cards">
 
-                            <div class="mdl-cell mdl-cell--6-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone">
+                            <div class="mdl-card mdl-shadow--2dp">
 
-                                <div class="mdl-card mdl-shadow--2dp">
+                                <h5>Dawn light client</h5>
 
-                                    <h5>Dawn light client</h5>
+                                <div class="mdl-card__supporting-text">
+                                    <ul>
+                                        <li>Incentivized blockchain-based social network</li>
+                                        <li>Decentralized blockchain-based file storage</li>
+                                        <li>Cryptocurrency wallet</li>
+                                        <li>P2P communications</li>
+                                    </ul>
+                                </div>
 
-                                    <div class="mdl-card__supporting-text">
-                                        <ul>
-                                            <li>Incentivized blockchain-based social network</li>
-                                            <li>Decentralized blockchain-based file storage</li>
-                                            <li>Cryptocurrency wallet</li>
-                                            <li>P2P communications</li>
-                                        </ul>
-                                    </div>
-
-                                    <div class="mdl-card__actions mdl-card--border">
-                                        <button class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect">
-                                            Take a look
-                                        </button>
-                                    </div>
-
+                                <div class="mdl-card__actions mdl-card--border">
+                                    <button class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect">
+                                        Take a look
+                                    </button>
                                 </div>
 
                             </div>
 
-                            <div class="mdl-cell mdl-cell--6-col-desktop mdl-cell--5-col-tablet mdl-cell--3-col-phone">
 
-                                <div class="mdl-card mdl-shadow--2dp">
 
-                                    <h5>Dawn client</h5>
+                            <div class="mdl-card mdl-shadow--2dp">
 
-                                    <div class="mdl-card__supporting-text">
-                                        <ul>
-                                            <li>Incentivized blockchain-based social network</li>
-                                            <li>Decentralized blockchain-based file storage</li>
-                                            <li>Cryptocurrency wallet</li>
-                                            <li>P2P communications</li>
-                                        </ul>
-                                    </div>
+                                <h5>Dawn client</h5>
 
-                                    <div class="mdl-card__actions mdl-card--border">
-                                        <button class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect">
-                                            Take a look
-                                        </button>
-                                    </div>
+                                <div class="mdl-card__supporting-text">
+                                    <ul>
+                                        <li>Incentivized blockchain-based social network</li>
+                                        <li>Decentralized blockchain-based file storage</li>
+                                        <li>Cryptocurrency wallet</li>
+                                        <li>P2P communications</li>
+                                    </ul>
                                 </div>
 
+                                <div class="mdl-card__actions mdl-card--border">
+                                    <button class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect">
+                                        Take a look
+                                    </button>
+                                </div>
                             </div>
 
                         </div>
@@ -409,7 +401,7 @@
                     </div>
 
                     <div class="mdl-mega-footer__bottom-section">
-                        <div class="mdl-logo">© 2017 DAWN NETWORK.</div>
+                        <div class="mdl-logo">© Better get human rights before copyright.</div>
                         <ul class="mdl-mega-footer__link-list">
                             <li><a href="#">Help</a></li>
                             <li><a href="#">Privacy & Terms</a></li>
