--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
                         <p>
                             Dawn blockchains network is empowering people and businesses to digitize transactions and services through a highly secure, shared and replicated ledger.
-                            Solving complex problems now and in the near future, Dawn push forward ecology, reduce cost at many level, provide a better scalability, reduce bandwidth, and reduce censorship.
+                            Solving complex problems now and in the near future, Dawn push forward ecology, reduce cost at many level, provide a better scalability, reduce bandwidth cost, and reduce censorship.
                         </p>
 
                     </div>
